tests/baselines/reference/TemplateExpression1.errors.txt
tests/cases/conformance/es6/templates/TemplateExpression1.ts(1,17): error TS2304: Cannot find name 'a'.
tests/cases/conformance/es6/templates/TemplateExpression1.ts(1,19): error TS1005: '}' expected.


==== tests/cases/conformance/es6/templates/TemplateExpression1.ts (2 errors) ====
    var v = `foo ${ a 
                    ~
!!! error TS2304: Cannot find name 'a'.
                      
!!! error TS1005: '}' expected.